# potd-rs

./: Cargo.toml  README.md
examples/: potd-urls.rs
src/: fetcher.rs  http_client.rs  lib.rs  parser.rs
