[package]
name = "potd"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
authors = ["metastable-void"]
repository = "https://github.com/menhera-org/potd-rs"
description = "Retrieve Picture of the Day feed from Wikimedia Commons"
homepage = "https://github.com/menhera-org/potd-rs"

[dependencies]
reqwest = "0.12.7"
tokio = { version = "1", features = ["full"] }
quick-xml = "0.36.2"
log = "0.4.22"

[dev-dependencies]
clap = { version = "4.5.18", features = ["derive"] }
env_logger = "0.11"
serde_json = "1.0.128"
